mType/tests/testFiles/typeChecking/error/nativeFunctionNamingConventionError.mt
// Test: Native function names must start with lowercase letter
// Expected Error: Function 'NativeGetTime' must start with a lowercase letter. Functions and methods should follow camelCase convention.

native function NativeGetTime(): int;